--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@langchain/core": "^0.2.20",
-    "@langchain/google-genai": "^0.0.22",
-    "@langchain/pinecone": "^0.0.8",
-    "@pinecone-database/pinecone": "^2.2.2",
-    "langchain": "^0.2.10"
+    "@google/generative-ai": "^0.15.0",
+    "@langchain/core": "^0.2.0",
+    "@langchain/google-genai": "^0.1.0",
+    "@langchain/pinecone": "^0.1.0",
+    "@pinecone-database/pinecone": "^2.2.2"
   }
 }
