--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.3",
     "@google/generative-ai": "^0.21.0",
     "@langchain/anthropic": "^0.2.18",
     "@langchain/core": "^0.3.79",
@@ -16,8 +13,12 @@
     "@langchain/pinecone": "^0.1.3",
     "@pinecone-database/pinecone": "^3.0.3",
     "bcryptjs": "^3.0.3",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^4.18.2",
     "langchain": "^0.3.0",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3"
   },
   "engines": {
